set(LIBSDL_DIR "sdl2")
set(LIBSDL_SRC_DIR "${LIBSDL_DIR}/src")
set(LIBSDL_INCLUDE_DIR "${LIBSDL_DIR}/include")

set(LIBSDL_INCLUDE_PATHS
    ${LIBSDL_INCLUDE_DIR}
)

set(LIBSDL_LINK_LIBRARIES_WINDOWS
    Imm32.lib
    Mincore.lib
    User32.lib
    Winmm.lib
)

set(LIBSDL_SOURCES_WINDOWS
    ${LIBSDL_INCLUDE_DIR}/SDL_config_windows.h
    ${LIBSDL_SRC_DIR}/core/windows/SDL_directx.h
    ${LIBSDL_SRC_DIR}/core/windows/SDL_windows.c
    ${LIBSDL_SRC_DIR}/core/windows/SDL_windows.h
    ${LIBSDL_SRC_DIR}/core/windows/SDL_xinput.c
    ${LIBSDL_SRC_DIR}/core/windows/SDL_xinput.h
    ${LIBSDL_SRC_DIR}/events/scancodes_windows.h
    ${LIBSDL_SRC_DIR}/filesystem/windows/SDL_sysfilesystem.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_dinputhaptic.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_dinputhaptic_c.h
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_windowshaptic.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_windowshaptic_c.h
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_xinputhaptic.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_xinputhaptic_c.h
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_dinputjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_dinputjoystick_c.h
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_mmjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_windowsjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_windowsjoystick_c.h
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_xinputjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_xinputjoystick_c.h
    ${LIBSDL_SRC_DIR}/loadso/windows/SDL_sysloadso.c    
    ${LIBSDL_SRC_DIR}/main/windows/SDL_windows_main.c
    ${LIBSDL_SRC_DIR}/main/windows/version.rc  
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_syscond.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_sysmutex.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_syssem.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_systhread.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_systhread_c.h
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_systls.c
    ${LIBSDL_SRC_DIR}/timer/windows/SDL_systimer.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_msctf.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_vkeys.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsclipboard.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsclipboard.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsevents.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsevents.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsframebuffer.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsframebuffer.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowskeyboard.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowskeyboard.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmessagebox.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmessagebox.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmodes.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmodes.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmouse.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmouse.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsopengl.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsopengl.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsshape.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsshape.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowstaskdialog.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsvideo.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsvideo.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowswindow.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowswindow.h
    ${LIBSDL_SRC_DIR}/video/windows/wmmsg.h
)

set(LIBSDL_SOURCES_MAC
    ${LIBSDL_INCLUDE_DIR}/SDL_config_macosx.h
    ${LIBSDL_SRC_DIR}/events/scancodes_darwin.h
    ${LIBSDL_SRC_DIR}/file/cocoa/SDL_rwopsbundlesupport.h
    ${LIBSDL_SRC_DIR}/file/cocoa/SDL_rwopsbundlesupport.m
    ${LIBSDL_SRC_DIR}/haptic/darwin/SDL_syshaptic.c
    ${LIBSDL_SRC_DIR}/haptic/darwin/SDL_syshaptic_c.h
    ${LIBSDL_SRC_DIR}/joystick/darwin/SDL_sysjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/darwin/SDL_sysjoystick_c.h
    ${LIBSDL_SRC_DIR}/render/metal/SDL_render_metal.m
    ${LIBSDL_SRC_DIR}/render/metal/SDL_shaders_metal.metal
    ${LIBSDL_SRC_DIR}/render/metal/SDL_shaders_metal_osx.h
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_syscond.c
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_sysmutex.c
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_sysmutex_c.h
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_syssem.c
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_systhread.c
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_systhread_c.h
    ${LIBSDL_SRC_DIR}/thread/pthread/SDL_systls.c
    ${LIBSDL_SRC_DIR}/timer/unix/SDL_systimer.c
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaclipboard.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaclipboard.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaevents.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaevents.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoakeyboard.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoakeyboard.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamessagebox.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamessagebox.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoametalview.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoametalview.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamodes.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamodes.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamouse.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamouse.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamousetap.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoamousetap.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaopengl.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaopengl.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaopengles.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoaopengles.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoashape.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoashape.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoavideo.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoavideo.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoavulkan.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoavulkan.m
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoawindow.h
    ${LIBSDL_SRC_DIR}/video/cocoa/SDL_cocoawindow.m
)

set(LIBSDL_SOURCES
    ${LIBSDL_INCLUDE_DIR}/begin_code.h
    ${LIBSDL_INCLUDE_DIR}/close_code.h
    ${LIBSDL_INCLUDE_DIR}/SDL.h
    ${LIBSDL_INCLUDE_DIR}/SDL_assert.h
    ${LIBSDL_INCLUDE_DIR}/SDL_atomic.h
    ${LIBSDL_INCLUDE_DIR}/SDL_audio.h
    ${LIBSDL_INCLUDE_DIR}/SDL_bits.h
    ${LIBSDL_INCLUDE_DIR}/SDL_blendmode.h
    ${LIBSDL_INCLUDE_DIR}/SDL_clipboard.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config.h.cmake
    ${LIBSDL_INCLUDE_DIR}/SDL_config.h.in
    ${LIBSDL_INCLUDE_DIR}/SDL_config_minimal.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config_wiz.h
    ${LIBSDL_INCLUDE_DIR}/SDL_copying.h
    ${LIBSDL_INCLUDE_DIR}/SDL_cpuinfo.h
    ${LIBSDL_INCLUDE_DIR}/SDL_egl.h
    ${LIBSDL_INCLUDE_DIR}/SDL_endian.h
    ${LIBSDL_INCLUDE_DIR}/SDL_error.h
    ${LIBSDL_INCLUDE_DIR}/SDL_events.h
    ${LIBSDL_INCLUDE_DIR}/SDL_filesystem.h
    ${LIBSDL_INCLUDE_DIR}/SDL_gamecontroller.h
    ${LIBSDL_INCLUDE_DIR}/SDL_gesture.h
    ${LIBSDL_INCLUDE_DIR}/SDL_haptic.h
    ${LIBSDL_INCLUDE_DIR}/SDL_hints.h
    ${LIBSDL_INCLUDE_DIR}/SDL_joystick.h
    ${LIBSDL_INCLUDE_DIR}/SDL_keyboard.h
    ${LIBSDL_INCLUDE_DIR}/SDL_keycode.h
    ${LIBSDL_INCLUDE_DIR}/SDL_loadso.h
    ${LIBSDL_INCLUDE_DIR}/SDL_log.h
    ${LIBSDL_INCLUDE_DIR}/SDL_main.h
    ${LIBSDL_INCLUDE_DIR}/SDL_messagebox.h
    ${LIBSDL_INCLUDE_DIR}/SDL_mouse.h
    ${LIBSDL_INCLUDE_DIR}/SDL_mutex.h
    ${LIBSDL_INCLUDE_DIR}/SDL_name.h
    ${LIBSDL_INCLUDE_DIR}/SDL_opengl.h
    ${LIBSDL_INCLUDE_DIR}/SDL_opengl_glext.h
    ${LIBSDL_INCLUDE_DIR}/SDL_pixels.h
    ${LIBSDL_INCLUDE_DIR}/SDL_platform.h
    ${LIBSDL_INCLUDE_DIR}/SDL_power.h
    ${LIBSDL_INCLUDE_DIR}/SDL_quit.h
    ${LIBSDL_INCLUDE_DIR}/SDL_rect.h
    ${LIBSDL_INCLUDE_DIR}/SDL_render.h
    ${LIBSDL_INCLUDE_DIR}/SDL_revision.h
    ${LIBSDL_INCLUDE_DIR}/SDL_rwops.h
    ${LIBSDL_INCLUDE_DIR}/SDL_scancode.h
    ${LIBSDL_INCLUDE_DIR}/SDL_sensor.h
    ${LIBSDL_INCLUDE_DIR}/SDL_shape.h
    ${LIBSDL_INCLUDE_DIR}/SDL_stdinc.h
    ${LIBSDL_INCLUDE_DIR}/SDL_surface.h
    ${LIBSDL_INCLUDE_DIR}/SDL_system.h
    ${LIBSDL_INCLUDE_DIR}/SDL_syswm.h
    ${LIBSDL_INCLUDE_DIR}/SDL_thread.h
    ${LIBSDL_INCLUDE_DIR}/SDL_timer.h
    ${LIBSDL_INCLUDE_DIR}/SDL_touch.h
    ${LIBSDL_INCLUDE_DIR}/SDL_types.h
    ${LIBSDL_INCLUDE_DIR}/SDL_version.h
    ${LIBSDL_INCLUDE_DIR}/SDL_video.h
    ${LIBSDL_SRC_DIR}/atomic/SDL_atomic.c
    ${LIBSDL_SRC_DIR}/atomic/SDL_spinlock.c
    ${LIBSDL_SRC_DIR}/audio/dummy/SDL_dummyaudio.c
    ${LIBSDL_SRC_DIR}/audio/dummy/SDL_dummyaudio.h
    ${LIBSDL_SRC_DIR}/audio/SDL_audio.c
    ${LIBSDL_SRC_DIR}/audio/SDL_audio_c.h
    ${LIBSDL_SRC_DIR}/audio/SDL_audiocvt.c
    ${LIBSDL_SRC_DIR}/audio/SDL_audiodev.c
    ${LIBSDL_SRC_DIR}/audio/SDL_audiodev_c.h
    ${LIBSDL_SRC_DIR}/audio/SDL_audiotypecvt.c
    ${LIBSDL_SRC_DIR}/audio/SDL_mixer.c
    ${LIBSDL_SRC_DIR}/audio/SDL_sysaudio.h
    ${LIBSDL_SRC_DIR}/audio/SDL_wave.c
    ${LIBSDL_SRC_DIR}/audio/SDL_wave.h
    ${LIBSDL_SRC_DIR}/cpuinfo/SDL_cpuinfo.c
    ${LIBSDL_SRC_DIR}/cpuinfo/SDL_simd.h
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi.c
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi.h
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi_overrides.h
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi_procs.h
    ${LIBSDL_SRC_DIR}/events/blank_cursor.h
    ${LIBSDL_SRC_DIR}/events/default_cursor.h
    ${LIBSDL_SRC_DIR}/events/SDL_clipboardevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_clipboardevents_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_displayevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_displayevents_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_dropevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_dropevents_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_events.c
    ${LIBSDL_SRC_DIR}/events/SDL_events_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_gesture.c
    ${LIBSDL_SRC_DIR}/events/SDL_gesture_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_keyboard.c
    ${LIBSDL_SRC_DIR}/events/SDL_keyboard_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_mouse.c
    ${LIBSDL_SRC_DIR}/events/SDL_mouse_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_quit.c
    ${LIBSDL_SRC_DIR}/events/SDL_sysevents.h
    ${LIBSDL_SRC_DIR}/events/SDL_touch.c
    ${LIBSDL_SRC_DIR}/events/SDL_touch_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_windowevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_windowevents_c.h
    ${LIBSDL_SRC_DIR}/file/SDL_rwops.c
    ${LIBSDL_SRC_DIR}/filesystem/dummy/SDL_sysfilesystem.c
    ${LIBSDL_SRC_DIR}/haptic/dummy/SDL_syshaptic.c
    ${LIBSDL_SRC_DIR}/haptic/SDL_haptic.c
    ${LIBSDL_SRC_DIR}/haptic/SDL_haptic_c.h
    ${LIBSDL_SRC_DIR}/haptic/SDL_syshaptic.h
    ${LIBSDL_SRC_DIR}/joystick/controller_type.h
    ${LIBSDL_SRC_DIR}/joystick/dummy/SDL_sysjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/SDL_gamecontroller.c
    ${LIBSDL_SRC_DIR}/joystick/SDL_gamecontrollerdb.h
    ${LIBSDL_SRC_DIR}/joystick/SDL_joystick.c
    ${LIBSDL_SRC_DIR}/joystick/SDL_joystick_c.h
    ${LIBSDL_SRC_DIR}/joystick/SDL_sysjoystick.h
    ${LIBSDL_SRC_DIR}/joystick/sort_controllers.py
    ${LIBSDL_SRC_DIR}/joystick/steam/SDL_steamcontroller.c
    ${LIBSDL_SRC_DIR}/joystick/steam/SDL_steamcontroller.h
    ${LIBSDL_SRC_DIR}/libm/e_atan2.c
    ${LIBSDL_SRC_DIR}/libm/e_exp.c
    ${LIBSDL_SRC_DIR}/libm/e_fmod.c
    ${LIBSDL_SRC_DIR}/libm/e_log.c
    ${LIBSDL_SRC_DIR}/libm/e_log10.c
    ${LIBSDL_SRC_DIR}/libm/e_pow.c
    ${LIBSDL_SRC_DIR}/libm/e_rem_pio2.c
    ${LIBSDL_SRC_DIR}/libm/e_sqrt.c
    ${LIBSDL_SRC_DIR}/libm/k_cos.c
    ${LIBSDL_SRC_DIR}/libm/k_rem_pio2.c
    ${LIBSDL_SRC_DIR}/libm/k_sin.c
    ${LIBSDL_SRC_DIR}/libm/k_tan.c
    ${LIBSDL_SRC_DIR}/libm/math_libm.h
    ${LIBSDL_SRC_DIR}/libm/math_private.h
    ${LIBSDL_SRC_DIR}/libm/s_atan.c
    ${LIBSDL_SRC_DIR}/libm/s_copysign.c
    ${LIBSDL_SRC_DIR}/libm/s_cos.c
    ${LIBSDL_SRC_DIR}/libm/s_fabs.c
    ${LIBSDL_SRC_DIR}/libm/s_floor.c
    ${LIBSDL_SRC_DIR}/libm/s_scalbn.c
    ${LIBSDL_SRC_DIR}/libm/s_sin.c
    ${LIBSDL_SRC_DIR}/libm/s_tan.c
    ${LIBSDL_SRC_DIR}/loadso/dlopen/SDL_sysloadso.c
    ${LIBSDL_SRC_DIR}/loadso/dummy/SDL_sysloadso.c
    ${LIBSDL_SRC_DIR}/main/dummy/SDL_dummy_main.c
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_glfuncs.h
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_render_gl.c
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_shaders_gl.c
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_shaders_gl.h
    ${LIBSDL_SRC_DIR}/render/SDL_d3dmath.c
    ${LIBSDL_SRC_DIR}/render/SDL_d3dmath.h
    ${LIBSDL_SRC_DIR}/render/SDL_render.c
    ${LIBSDL_SRC_DIR}/render/SDL_sysrender.h
    ${LIBSDL_SRC_DIR}/render/SDL_yuv_sw.c
    ${LIBSDL_SRC_DIR}/render/SDL_yuv_sw_c.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendfillrect.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendfillrect.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendline.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendline.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendpoint.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendpoint.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_draw.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawline.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawline.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawpoint.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawpoint.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_render_sw.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_render_sw_c.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_rotate.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_rotate.h
    ${LIBSDL_SRC_DIR}/SDL.c
    ${LIBSDL_SRC_DIR}/SDL_assert.c
    ${LIBSDL_SRC_DIR}/SDL_assert_c.h
    ${LIBSDL_SRC_DIR}/SDL_dataqueue.c
    ${LIBSDL_SRC_DIR}/SDL_dataqueue.h
    ${LIBSDL_SRC_DIR}/SDL_error.c
    ${LIBSDL_SRC_DIR}/SDL_error_c.h
    ${LIBSDL_SRC_DIR}/SDL_hints.c
    ${LIBSDL_SRC_DIR}/SDL_internal.h
    ${LIBSDL_SRC_DIR}/SDL_log.c
    ${LIBSDL_SRC_DIR}/sensor/dummy/SDL_dummysensor.c
    ${LIBSDL_SRC_DIR}/sensor/dummy/SDL_dummysensor.h
    ${LIBSDL_SRC_DIR}/sensor/SDL_sensor.c
    ${LIBSDL_SRC_DIR}/sensor/SDL_sensor_c.h
    ${LIBSDL_SRC_DIR}/sensor/SDL_syssensor.h
    ${LIBSDL_SRC_DIR}/stdlib/SDL_getenv.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_iconv.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_malloc.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_qsort.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_stdlib.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_string.c
    ${LIBSDL_SRC_DIR}/thread/SDL_systhread.h
    ${LIBSDL_SRC_DIR}/thread/SDL_thread.c
    ${LIBSDL_SRC_DIR}/thread/SDL_thread_c.h
    ${LIBSDL_SRC_DIR}/timer/SDL_timer.c
    ${LIBSDL_SRC_DIR}/timer/SDL_timer_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit_0.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_1.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_A.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_auto.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_auto.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit_copy.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_copy.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit_N.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_slow.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_slow.h
    ${LIBSDL_SRC_DIR}/video/SDL_bmp.c
    ${LIBSDL_SRC_DIR}/video/SDL_clipboard.c
    ${LIBSDL_SRC_DIR}/video/SDL_fillrect.c
    ${LIBSDL_SRC_DIR}/video/SDL_pixels.c
    ${LIBSDL_SRC_DIR}/video/SDL_pixels_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_rect.c
    ${LIBSDL_SRC_DIR}/video/SDL_rect_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_RLEaccel.c
    ${LIBSDL_SRC_DIR}/video/SDL_RLEaccel_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_shape.c
    ${LIBSDL_SRC_DIR}/video/SDL_shape_internals.h
    ${LIBSDL_SRC_DIR}/video/SDL_stretch.c
    ${LIBSDL_SRC_DIR}/video/SDL_surface.c
    ${LIBSDL_SRC_DIR}/video/SDL_sysvideo.h
    ${LIBSDL_SRC_DIR}/video/SDL_video.c
    ${LIBSDL_SRC_DIR}/video/SDL_yuv.c
    ${LIBSDL_SRC_DIR}/video/SDL_yuv_c.h
    ${LIBSDL_SRC_DIR}/video/sdlgenblit.pl
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/LICENSE
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/README.md
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb.c
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb.h
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb_sse_func.h
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb_std_func.h
)

if (PLATFORM_WINDOWS)
    list(APPEND LIBSDL_SOURCES ${LIBSDL_SOURCES_WINDOWS})
endif()

if (PLATFORM_MAC)
    list(APPEND LIBSDL_SOURCES ${LIBSDL_SOURCES_MAC})
endif()

add_library(${LIBSDL_NAME} ${LIBSDL_SOURCES})
include_directories(${LIBSDL_INCLUDE_PATHS})
target_include_directories(${LIBSDL_NAME} INTERFACE ${LIBSDL_INCLUDE_DIR})

if (PLATFORM_WINDOWS)
    add_definitions(-DSDL_DISABLE_WINDOWS_IME)
    target_link_libraries(${LIBSDL_NAME} ${LIBSDL_LINK_LIBRARIES_WINDOWS})
endif()

if (PLATFORM_MAC)
    FIND_LIBRARY(APP_KIT_FRAMEWORK AppKit)
    FIND_LIBRARY(CARBON_FRAMEWORK Carbon)
    FIND_LIBRARY(COCOA_FRAMEWORK Cocoa)
    FIND_LIBRARY(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
    FIND_LIBRARY(CORE_VIDEO_FRAMEWORK CoreVideo)
    FIND_LIBRARY(FORCE_FEEDBACK_FRAMEWORK ForceFeedback)
    FIND_LIBRARY(IO_KIT_FRAMEWORK IOKit)
    FIND_LIBRARY(METAL_FRAMEWORK Metal)

    target_link_libraries(
        ${LIBSDL_NAME}
        ${APP_KIT_FRAMEWORK}
        ${CARBON_FRAMEWORK}
        ${COCOA_FRAMEWORK}
        ${CORE_FOUNDATION_FRAMEWORK}
        ${CORE_VIDEO_FRAMEWORK}
        ${FORCE_FEEDBACK_FRAMEWORK}
        ${IO_KIT_FRAMEWORK}
        ${METAL_FRAMEWORK}
    )
endif()
